--- a/ProgramManager/Views/DialogPackages.xaml
+++ b/ProgramManager/Views/DialogPackages.xaml
@@ -1,115 +1,156 @@
-﻿<Window x:Class="ProgramManager.Views.DialogPackages"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ProgramManager.Views"
-        xmlns:models="clr-namespace:ProgramManager.Models"
-        xmlns:vm="clr-namespace:ProgramManager.ViewModels"
-        xmlns:dpack="clr-namespace:ProgramManager.Views.DialogPacks"
-        mc:Ignorable="d"
-        Title="Создать пакет" 
-        Height="550" Width="417" 
-        HorizontalAlignment="Center" 
-        VerticalAlignment="Center" 
-        WindowStartupLocation="CenterScreen"
-        MinHeight="600" MinWidth="500"
-        MaxHeight="600" MaxWidth="500" Background="#FFE6E6E6">
+﻿<Window
+    x:Class="ProgramManager.Views.DialogPackages"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:converters="clr-namespace:ProgramManager.Converters"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:ProgramManager.Views.DialogPacks"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:models="clr-namespace:ProgramManager.Models"
+    xmlns:vm="clr-namespace:ProgramManager.ViewModels"
+    Title="Создать пакет"
+    Width="417"
+    Height="550"
+    MinWidth="500"
+    MinHeight="600"
+    MaxWidth="500"
+    MaxHeight="600"
+    HorizontalAlignment="Center"
+    VerticalAlignment="Center"
+    Background="#FFE6E6E6"
+    WindowStartupLocation="CenterScreen"
+    mc:Ignorable="d">
+
     <Grid>
+        <Grid.DataContext>
+            <vm:DialogPackagesViewModel />
+        </Grid.DataContext>
         <Grid.RowDefinitions>
-            <RowDefinition Height="25*"/>
-            <RowDefinition Height="100*"/>
+            <RowDefinition Height="25*" />
+            <RowDefinition Height="100*" />
         </Grid.RowDefinitions>
         <Grid Grid.Row="0">
             <Grid.RowDefinitions>
-                <RowDefinition Height="30*"/>
-                <RowDefinition Height="45*"/>
-                <RowDefinition Height="80*"/>
+                <RowDefinition Height="30*" />
+                <RowDefinition Height="45*" />
+                <RowDefinition Height="80*" />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="135*"/>
-                <ColumnDefinition Width="35*"/>
+                <ColumnDefinition Width="135*" />
+                <ColumnDefinition Width="35*" />
             </Grid.ColumnDefinitions>
-            <Menu Grid.Row="0" Grid.ColumnSpan="2" Background="#FFE6E6E6">
-                <MenuItem Header="Пакет" FontSize="12">
-                    <MenuItem Header="Сохранить"/>
-                    <MenuItem Header="Сохранить как шаблон"/>
-                    <MenuItem Header="Отменить и выйти"/>
-                    <Separator/>
-                    <MenuItem Header="Закрыть окно"/>
+            <Menu
+                Grid.Row="0"
+                Grid.ColumnSpan="2"
+                Background="#FFE6E6E6">
+                <MenuItem FontSize="12" Header="Пакет">
+                    <MenuItem Header="Сохранить" />
+                    <MenuItem Header="Сохранить как шаблон" />
+                    <MenuItem Header="Отменить и выйти" />
+                    <Separator />
+                    <MenuItem Header="Закрыть окно" />
                 </MenuItem>
-                <MenuItem Header="Правка" FontSize="12">
-                    <MenuItem Header="Вырезать"/>
-                    <MenuItem Header="Скопировать"/>
-                    <MenuItem Header="Вставить"/>
-                    <MenuItem Header="Удалить"/>
+                <MenuItem FontSize="12" Header="Правка">
+                    <MenuItem Header="Вырезать" />
+                    <MenuItem Header="Скопировать" />
+                    <MenuItem Header="Вставить" />
+                    <MenuItem Header="Удалить" />
                 </MenuItem>
-                <MenuItem Header="Инструменты" FontSize="12">
-                    <MenuItem Header="Порядок полей"/>
-                    <MenuItem Header="Выбрать шаблон"/>
-                    <MenuItem Header="Редактировать категории"/>
-                    <MenuItem Header="Редактировать теги"/>
+                <MenuItem FontSize="12" Header="Инструменты">
+                    <MenuItem Header="Порядок полей" />
+                    <MenuItem Header="Выбрать шаблон" />
+                    <MenuItem Header="Редактировать категории" />
+                    <MenuItem Header="Редактировать теги" />
                 </MenuItem>
             </Menu>
-            <TextBox Grid.Row="2" Margin="10,10,10,10" Height="35" Tag="Имя пакета..."/>
-            <Image Grid.Column="1" Grid.Row="2" Source="../Resources/User/Images/Adobe Photoshop.png" Height="48"/>
-            <WrapPanel Grid.Row="1" Grid.ColumnSpan="3" VerticalAlignment="Center">
-                <Button x:Name="cpSave"  Margin="5,0,0,0" Height="28" Style="{StaticResource btIcon}">
+            <TextBox
+                Grid.Row="2"
+                Height="35"
+                Margin="10,10,10,10"
+                Tag="Имя пакета..." />
+            <Image
+                Grid.Row="2"
+                Grid.Column="1"
+                Height="48"
+                Source="../Resources/User/Images/Adobe Photoshop.png" />
+            <WrapPanel
+                Grid.Row="1"
+                Grid.ColumnSpan="3"
+                VerticalAlignment="Center">
+                <Button
+                    Height="28"
+                    Margin="5,0,0,0"
+                    Command="{Binding SavingPack}"
+                    Style="{StaticResource btIcon}">
                     <ContentControl>
                         <WrapPanel>
                             <Image Width="18" Source="../Resources/Icons/Save_48px.png" />
-                            <Label Content="Сохранить" BorderBrush="{x:Null}" Height="26"/>
+                            <Label
+                                Height="26"
+                                BorderBrush="{x:Null}"
+                                Content="Сохранить" />
                         </WrapPanel>
                     </ContentControl>
                 </Button>
-                <Button x:Name="cpAddTextField" Height="28" Style="{StaticResource btIcon}">
+                <Button Height="28" Style="{StaticResource btIcon}">
                     <ContentControl>
                         <WrapPanel>
-                            <Image Width="18" Source="../Resources/Icons/Add_Textfield_48px.png"/>
-                            <Label Content="Доб. поля" BorderBrush="{x:Null}" Height="26"/>
+                            <Image Width="18" Source="../Resources/Icons/Add_Textfield_48px.png" />
+                            <Label
+                                Height="26"
+                                BorderBrush="{x:Null}"
+                                Content="Доб. поля" />
                         </WrapPanel>
                     </ContentControl>
                 </Button>
-                <Button x:Name="cpSelectCategory" Height="28" Style="{StaticResource btIcon}">
+                <Button Height="28" Style="{StaticResource btIcon}">
                     <ContentControl>
                         <WrapPanel>
-                            <Image Width="18" Source="../Resources/Icons/Categorize_48px.png"/>
-                            <Label Content="Доб. Категории" BorderBrush="{x:Null}" Height="26"/>
+                            <Image Width="18" Source="../Resources/Icons/Categorize_48px.png" />
+                            <Label
+                                Height="26"
+                                BorderBrush="{x:Null}"
+                                Content="Доб. Категории" />
                         </WrapPanel>
                     </ContentControl>
                 </Button>
-                <Button x:Name="cpSelectTag" Height="28" Style="{StaticResource btIcon}">
+                <Button Height="28" Style="{StaticResource btIcon}">
                     <ContentControl>
                         <WrapPanel>
-                            <Image Width="18" Source="../Resources/Icons/Add_Tag_48px.png"/>
-                            <Label Content="Доб. Теги" BorderBrush="{x:Null}" Height="26"/>
+                            <Image Width="18" Source="../Resources/Icons/Add_Tag_48px.png" />
+                            <Label
+                                Height="26"
+                                BorderBrush="{x:Null}"
+                                Content="Доб. Теги" />
                         </WrapPanel>
                     </ContentControl>
                 </Button>
             </WrapPanel>
         </Grid>
         <Grid Grid.Row="1">
-            <Grid.DataContext>
-                <vm:TextFieldViewModel/>
-            </Grid.DataContext>
             <TabControl Grid.Row="1">
                 <TabItem Header="Поля">
-                    <ScrollViewer ScrollViewer.VerticalScrollBarVisibility="Auto">
+                    <ScrollViewer VerticalScrollBarVisibility="Auto">
                         <ItemsControl>
-                            <dpack:TabFields/>
+                            <local:TabFields />
                         </ItemsControl>
                     </ScrollViewer>
                 </TabItem>
                 <TabItem Header="Описание">
                     <Grid>
-                        <RichTextBox Tag="Имя.." Padding="10" FontSize="14"
-                                         SelectionBrush="#FF9BF9E4" 
-                                         Foreground="Black" BorderBrush="{x:Null}"/>
+                        <TextBox
+                            Padding="5"
+                            BorderBrush="{x:Null}"
+                            FocusVisualStyle="{x:Null}"
+                            FontSize="12"
+                            Style="{x:Null}"
+                            Text="{Binding Description}"
+                            TextWrapping="Wrap" />
                     </Grid>
                 </TabItem>
                 <TabItem x:Name="TabAddPath" Header="Файлы*">
                     <ItemsControl>
-                        <dpack:TabFiles/>
+                        <local:TabFiles />
                     </ItemsControl>
                 </TabItem>
             </TabControl>
