--- a/ProgramManager/Views/MainView.xaml
+++ b/ProgramManager/Views/MainView.xaml
@@ -2,12 +2,7 @@
     x:Class="ProgramManager.Views.MainView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:converter="clr-namespace:ProgramManager.Converters"
-    xmlns:converters="clr-namespace:ProgramManager.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:enums="clr-namespace:ProgramManager.Enums"
-    xmlns:local="clr-namespace:ProgramManager"
-    xmlns:markupExtensions="clr-namespace:ProgramManager.MarkupExtensions"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:vm="clr-namespace:ProgramManager.ViewModels"
     Title="Pragram Manager"
@@ -15,12 +10,10 @@
     Height="606"
     MinWidth="870"
     MinHeight="584"
-    MaxWidth="870"
-    MaxHeight="700"
     WindowStartupLocation="CenterScreen"
     mc:Ignorable="d">
     <Window.DataContext>
-        <vm:MainViewModel />
+        <vm:NewMainModel />
     </Window.DataContext>
 
     <Grid Height="566" VerticalAlignment="Top">
@@ -106,7 +99,6 @@
             Grid.ColumnSpan="3"
             VerticalAlignment="Center">
             <Button
-                x:Name="pToolsOpen"
                 Height="30"
                 Margin="5,0,0,0"
                 Style="{StaticResource btIcon}">
@@ -122,10 +114,7 @@
                     </ContentControl>
                 </Button.Content>
             </Button>
-            <Button
-                x:Name="pToolsCreate"
-                Height="30"
-                Style="{StaticResource btIcon}">
+            <Button Height="30" Style="{StaticResource btIcon}">
                 <Button.Content>
                     <ContentControl>
                         <WrapPanel>
@@ -138,10 +127,7 @@
                     </ContentControl>
                 </Button.Content>
             </Button>
-            <Button
-                x:Name="pToolsEdit"
-                Height="30"
-                Style="{StaticResource btIcon}">
+            <Button Height="30" Style="{StaticResource btIcon}">
                 <Button.Content>
                     <ContentControl>
                         <WrapPanel>
@@ -154,10 +140,7 @@
                     </ContentControl>
                 </Button.Content>
             </Button>
-            <Button
-                x:Name="pToolsRename"
-                Height="30"
-                Style="{StaticResource btIcon}">
+            <Button Height="30" Style="{StaticResource btIcon}">
                 <Button.Content>
                     <ContentControl>
                         <WrapPanel>
@@ -175,10 +158,7 @@
                 Height="25"
                 Margin="5"
                 Fill="#CDCDCD" />
-            <Button
-                x:Name="pToolsFavorites"
-                Height="30"
-                Style="{StaticResource btIcon}">
+            <Button Height="30" Style="{StaticResource btIcon}">
                 <Button.Content>
                     <ContentControl>
                         <WrapPanel>
@@ -191,10 +171,7 @@
                     </ContentControl>
                 </Button.Content>
             </Button>
-            <Button
-                x:Name="pToolsCategorize"
-                Height="30"
-                Style="{StaticResource btIcon}">
+            <Button Height="30" Style="{StaticResource btIcon}">
                 <Button.Content>
                     <ContentControl>
                         <WrapPanel>
@@ -207,10 +184,7 @@
                     </ContentControl>
                 </Button.Content>
             </Button>
-            <Button
-                x:Name="pToolsTag"
-                Height="30"
-                Style="{StaticResource btIcon}">
+            <Button Height="30" Style="{StaticResource btIcon}">
                 <Button.Content>
                     <ContentControl>
                         <WrapPanel>
@@ -235,9 +209,9 @@
             Margin="5,5,5,5"
             Padding="10,7"
             VerticalAlignment="Center"
-            ItemsSource="{Binding Category, Mode=TwoWay}"
-            SelectedIndex="0"
-            SelectedItem="{Binding CurrentCategory, Mode=TwoWay}">
+            ItemsSource="{Binding Packages/Categories}"
+            SelectedIndex="{Binding IndexCategory}"
+            SelectedItem="{Binding CurrentCategory}">
             <ComboBox.ItemTemplate>
                 <DataTemplate>
                     <StackPanel>
@@ -245,7 +219,7 @@
                             Width="auto"
                             Height="30"
                             Padding="5,3"
-                            Text="{Binding CategoryName}" />
+                            Text="{Binding Name}" />
                     </StackPanel>
                 </DataTemplate>
             </ComboBox.ItemTemplate>
@@ -255,9 +229,8 @@
             Grid.RowSpan="4"
             Margin="5,0"
             IsSynchronizedWithCurrentItem="True"
-            ItemStringFormat=""
-            ItemsSource="{Binding Tags, Mode=TwoWay}"
-            SelectedItem="{Binding CurrentTag, Mode=TwoWay}">
+            ItemsSource="{Binding Packages/Tag}"
+            SelectedItem="{Binding CurrentTag}">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <WrapPanel>
@@ -265,14 +238,7 @@
                             Width="190"
                             Height="30"
                             Padding="5,8"
-                            Text="{Binding TagName}">
-                            <!--<TextBlock.InputBindings>
-                                <MouseBinding
-                                    Command="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Window}, Path=DataContext.InsertCommand}"
-                                    CommandParameter="{Binding Path}"
-                                    Gesture="LeftClick"/>
-                            </TextBlock.InputBindings>-->
-                        </TextBlock>
+                            Text="{Binding Name}" />
                         <Label Content="{Binding Count}" />
                     </WrapPanel>
                 </DataTemplate>
@@ -293,7 +259,7 @@
                 <TextBox
                     Grid.Column="1"
                     Tag="Искать..."
-                    Text="{Binding FilterPackages, UpdateSourceTrigger=PropertyChanged}" />
+                    Text="" />
                 <Button
                     Grid.Column="2"
                     Margin="4"
@@ -314,9 +280,9 @@
             Grid.Row="4"
             Grid.RowSpan="4"
             Grid.Column="1"
-            ItemsSource="{Binding Packages, Mode=TwoWay}"
-            SelectedIndex="{Binding IndexPackage, Mode=TwoWay}"
-            SelectedItem="{Binding CurrentPackage, Mode=TwoWay}">
+            ItemsSource="{Binding Packages}"
+            SelectedIndex="{Binding IndexPackage}"
+            SelectedItem="{Binding CurrentPackage}">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <StackPanel>
@@ -324,7 +290,7 @@
                             Height="45"
                             Margin="5,0,0,0"
                             Padding="0,15"
-                            Text="{Binding Name, Mode=TwoWay}" />
+                            Text="{Binding Name}" />
                     </StackPanel>
                 </DataTemplate>
             </ListBox.ItemTemplate>
@@ -355,12 +321,12 @@
                 Width="240"
                 Height="1"
                 Fill="#CDCDCD" />
-            <ItemsControl ItemsSource="{Binding CurrentPackage, Mode=TwoWay}">
+            <ItemsControl ItemsSource="{Binding Packages/Datails}">
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
                         <WrapPanel>
-                            <Label Content="{Binding Label}" FontWeight="Bold" />
-                            <Label Name="PackageName" Content="{Binding Field}" />
+                            <Label Content="{Binding Name, StringFormat={}{0}{:}}" FontWeight="Bold" />
+                            <Label Name="PackageName" Content="{Binding Value}" />
                         </WrapPanel>
                     </DataTemplate>
                 </ItemsControl.ItemTemplate>
