--- a/ProgramManager/Views/PackagesDialog.xaml
+++ b/ProgramManager/Views/PackagesDialog.xaml
@@ -116,7 +116,7 @@
                         </WrapPanel>
                     </ContentControl>
                 </Button>
-                <Button Height="28" Style="{StaticResource btIcon}">
+                <Button Command="{Binding OpenTagDialog}" Height="28" Style="{StaticResource btIcon}">
                     <ContentControl>
                         <WrapPanel>
                             <Image Width="18" Source="../Resources/Icons/Add_Tag_48px.png" />
@@ -130,7 +130,11 @@
             </WrapPanel>
         </Grid>
         <Grid Grid.Row="1">
-            <TabControl Grid.Row="1">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="14*" />
+                <RowDefinition />
+            </Grid.RowDefinitions>
+            <TabControl Grid.Row="0">
                 <TabItem Header="Поля">
                     <TabItem.ContextMenu>
                         <ContextMenu ItemsSource="{Binding MenuItem}" />
@@ -159,6 +163,16 @@
                     </ItemsControl>
                 </TabItem>
             </TabControl>
+            <!--  Этот код не входит в проект, а нужен для удобства разработки  -->
+            <Button
+                x:Name="Exit"
+                Grid.Row="1"
+                Width="20"
+                Height="20"
+                Margin="5"
+                HorizontalAlignment="Right"
+                Click="Exit_Click"
+                Content="X" />
         </Grid>
     </Grid>
 </Window>
